--- a/app/build.gradle
+++ b/app/build.gradle
@@ -25,13 +25,13 @@ android {
             storePassword 'kaka019930'
         }
     }
-    compileSdkVersion 29
+    compileSdkVersion 30
     buildToolsVersion "29.0.3"
     defaultConfig {
         multiDexEnabled true
         applicationId "com.leon.estimate"
         minSdkVersion 19
-        targetSdkVersion 29
+        targetSdkVersion 30
         versionCode 1
         versionName "1.1.1"
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
@@ -68,29 +68,35 @@ android {
         sourceCompatibility JavaVersion.VERSION_1_8
         targetCompatibility JavaVersion.VERSION_1_8
     }
+    buildFeatures {
+        dataBinding = true
+        viewBinding = true
+    }
 }
 
 dependencies {
     implementation fileTree(include: ['*.jar'], dir: 'libs')
+
     implementation 'androidx.appcompat:appcompat:1.1.0'
     implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
-    implementation 'androidx.legacy:legacy-support-v4:1.0.0'
-    implementation 'androidx.lifecycle:lifecycle-extensions:2.2.0'
-//    implementation files('libs/poi-3.12-android-a.jar')
-//    implementation files('libs/poi-ooxml-schemas-3.12-20150511-a.jar')
+    testImplementation 'junit:junit:4.13'
     androidTestImplementation 'androidx.test:runner:1.2.0'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
-    //AndroidX
-    implementation 'androidx.cardview:cardview:1.0.0'
-    //noinspection GradleCompatible
-    implementation 'com.android.support:cardview-v7:25.2.1'
+
+        //noinspection GradleCompatible
+    implementation 'com.android.support:appcompat-v7:27.1.1'
     //noinspection GradleCompatible
     implementation 'com.android.support:design:28.0.0'
-    implementation 'com.google.android.material:material:1.1.0'
-    testImplementation 'junit:junit:4.13'
 
-    implementation 'com.mapbox.mapboxsdk:mapbox-android-sdk:8.1.0'
-    implementation 'org.osmdroid:osmdroid-android:6.1.6@aar'
+    implementation 'androidx.legacy:legacy-support-v4:1.0.0'
+    implementation 'androidx.lifecycle:lifecycle-extensions:2.2.0'
+//    //AndroidX
+//    implementation 'androidx.cardview:cardview:1.0.0'
+//    //noinspection GradleCompatible
+//    implementation 'com.android.support:cardview-v7:25.2.1'
+//    implementation 'com.google.android.material:material:1.1.0'
+
+    implementation 'org.osmdroid:osmdroid-android:6.1.7@aar'
     //noinspection GradlePath
     implementation files('libs/osmbonuspack_6.6.0.aar')
     implementation project(':osmbonuspack_6.6.0')
@@ -100,15 +106,9 @@ dependencies {
     implementation 'com.squareup.retrofit2:retrofit:2.6.2'
     implementation 'com.squareup.retrofit2:converter-gson:2.6.2'
     implementation 'com.squareup.okhttp3:logging-interceptor:4.0.0-alpha02'
+
     implementation 'androidx.multidex:multidex:2.0.1'
     implementation 'com.facebook.shimmer:shimmer:0.5.0@aar'
-    //noinspection AnnotationProcessorOnCompilePath
-    implementation 'com.jakewharton:butterknife:10.2.1'
-    //noinspection AnnotationProcessorOnCompilePath
-    implementation 'com.jakewharton:butterknife-compiler:10.2.1'
-    annotationProcessor "com.jakewharton:butterknife-compiler:10.2.1"
-    implementation 'com.yarolegovich:lovely-dialog:1.0.7'
-    implementation 'com.google.code.gson:gson:2.8.6'
 
     implementation 'android.arch.persistence.room:runtime:1.1.1'
     annotationProcessor 'android.arch.persistence.room:compiler:1.1.1'
