--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -37,16 +37,16 @@
         android:theme="@style/AppTheme"
         android:usesCleartextTraffic="true"
         tools:ignore="GoogleAppIndexingWarning,UnusedAttribute">
-        <activity android:name=".Activities.DocumentActivity" />
+        <activity android:name=".activities.DocumentActivity" />
         <activity
-            android:name=".Activities.FormActivity"
+            android:name=".activities.FormActivity"
             android:windowSoftInputMode="stateAlwaysHidden"
             tools:ignore="LockedOrientationActivity" />
-        <activity android:name=".Activities.BrightnessContrastActivity" />
-        <activity android:name=".Activities.CropActivity" />
-        <activity android:name=".Activities.ListActivity" />
+        <activity android:name=".activities.BrightnessContrastActivity" />
+        <activity android:name=".activities.CropActivity" />
+        <activity android:name=".activities.ListActivity" />
         <activity
-            android:name=".Activities.SplashActivity"
+            android:name=".activities.SplashActivity"
             android:theme="@style/AppTheme.NoActionBar"
             tools:ignore="LockedOrientationActivity">
             <intent-filter>
@@ -56,22 +56,22 @@
             </intent-filter>
         </activity>
         <activity
-            android:name=".Activities.MainActivity"
+            android:name=".activities.MainActivity"
             android:label="@string/app_name"
             android:theme="@style/AppTheme.NoActionBar">
         </activity>
         <activity
-            android:name=".Activities.LoginActivity"
+            android:name=".activities.LoginActivity"
             android:label="@string/login"
             android:theme="@style/AppTheme.NoActionBar"
             android:windowSoftInputMode="stateAlwaysHidden"
             tools:ignore="LockedOrientationActivity" />
 
         <activity
-            android:name=".Activities.TakeOtherPhotoActivity"
+            android:name=".activities.TakeOtherPhotoActivity"
             android:label="@string/paper" />
         <activity
-            android:name=".Activities.DownloadActivity"
+            android:name=".activities.DownloadActivity"
             android:label="@string/downloadDetails" />
     </application>
 
