--- a/app/build.gradle
+++ b/app/build.gradle
@@ -91,16 +91,21 @@ dependencies {
 //    implementation 'com.android.support:cardview-v7:25.2.1'
 //    implementation 'com.google.android.material:material:1.1.0'
 
+//    implementation 'com.google.maps.android:android-maps-utils:2.1.2'
+    implementation 'com.github.MKergall:osmbonuspack:6.3'
     implementation 'org.osmdroid:osmdroid-android:6.1.7@aar'
+    implementation 'com.cocoahero.android:geojson:1.0.1@jar'
     //noinspection GradlePath
-    implementation files('libs/osmbonuspack_6.6.0.aar')
+//    implementation files('libs/osmbonuspack_6.6.0.aar')
 //    implementation project(':osmbonuspack_6.6.0')
 
     implementation 'com.yarolegovich:lovely-dialog:1.0.7'
-    implementation 'com.google.code.gson:gson:2.8.6'
     implementation 'com.squareup.retrofit2:retrofit:2.6.2'
     implementation 'com.squareup.retrofit2:converter-gson:2.6.2'
     implementation 'com.squareup.okhttp3:logging-interceptor:4.0.0-alpha02'
+    implementation "com.squareup.retrofit2:converter-scalars:2.6.2"
+    implementation 'com.squareup.retrofit2:adapter-rxjava2:2.2.0'
+    implementation 'com.squareup.retrofit2:converter-moshi:2.3.0'
 
     implementation 'androidx.multidex:multidex:2.0.1'
     implementation 'com.facebook.shimmer:shimmer:0.5.0@aar'
