--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -38,8 +38,10 @@
         android:theme="@style/AppTheme"
         android:usesCleartextTraffic="true"
         tools:ignore="AllowBackup,GoogleAppIndexingWarning,UnusedAttribute">
-        <activity android:name=".activities.CreateImageActivity"></activity>
-        <activity android:name=".activities.ListActivity" />
+        <activity android:name=".activities.CreateImageActivity" />
+        <activity android:name=".activities.ListActivity">
+
+        </activity>
         <activity android:name=".activities.DocumentActivity" />
         <activity android:name=".activities.DocumentFormActivity" />
         <activity
