--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -38,15 +38,13 @@
         android:theme="@style/AppTheme"
         android:usesCleartextTraffic="true"
         tools:ignore="AllowBackup,GoogleAppIndexingWarning,UnusedAttribute">
-        <activity android:name=".activities.MotherChildActivity" />
+        <activity
+            android:name=".activities.MotherChildActivity"
+            android:label="@string/request" />
         <activity android:name=".activities.SearchActivity" />
         <activity android:name=".activities.CreateImageActivity" />
         <activity android:name=".activities.ListActivity">
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
 
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
         </activity>
         <activity android:name=".activities.DocumentActivity" />
         <activity android:name=".activities.DocumentFormActivity" />
@@ -59,7 +57,11 @@
             android:name=".activities.SplashActivity"
             android:theme="@style/AppTheme.NoActionBar"
             tools:ignore="LockedOrientationActivity">
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
 
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
         </activity>
         <activity
             android:name=".activities.MainActivity"
