--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,6 +14,9 @@
     <uses-permission android:name="android.permission.READ_PHONE_STATE" />
 
     <uses-feature
+        android:name="android.hardware.camera"
+        android:required="true" />
+    <uses-feature
         android:name="android.hardware.location.network"
         android:required="false" />
     <uses-feature
@@ -27,6 +30,7 @@
         android:required="false" />
 
     <application
+        android:requestLegacyExternalStorage="true"
         android:name=".MyApplication"
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
@@ -67,8 +71,7 @@
         <activity
             android:name=".activities.MainActivity"
             android:label="@string/app_name"
-            android:theme="@style/AppTheme.NoActionBar">
-        </activity>
+            android:theme="@style/AppTheme.NoActionBar"></activity>
         <activity
             android:name=".activities.LoginActivity"
             android:label="@string/login"
