--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -57,7 +57,6 @@
             android:label="@string/request" />
         <activity android:name=".activities.SearchActivity" />
         <activity android:name=".activities.CreateImageActivity" />
-        <activity android:name=".activities.ListActivity" />
         <activity android:name=".activities.DocumentActivity" />
         <activity android:name=".activities.DocumentFormActivity" />
         <activity
@@ -65,17 +64,17 @@
             android:windowSoftInputMode="stateAlwaysHidden" />
         <activity android:name=".activities.BrightnessContrastActivity" />
         <activity android:name=".activities.CropActivity" />
-        <activity
-            android:name=".activities.SplashActivity"
-            android:theme="@style/AppTheme.NoActionBar"
-            tools:ignore="LockedOrientationActivity">
-
+        <activity android:name=".activities.ListActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity
+            android:name=".activities.SplashActivity"
+            android:theme="@style/AppTheme.NoActionBar"
+            tools:ignore="LockedOrientationActivity"></activity>
         <activity
             android:name=".activities.MainActivity"
             android:label="@string/app_name"
