--- a/app/build.gradle
+++ b/app/build.gradle
@@ -10,8 +10,7 @@ android {
         exclude 'lib/mips/libopencv_java3.so'
         exclude 'lib/armeabi/libopencv_java3.so'
     }
-    compileSdkVersion 30
-    buildToolsVersion "29.0.3"
+    compileSdkVersion 33
     signingConfigs {
         config {
             keyAlias 'ali_angel'
@@ -24,7 +23,7 @@ android {
         multiDexEnabled true
         applicationId "com.leon.estimate"
         minSdkVersion 19
-        targetSdkVersion 30
+        targetSdkVersion 33
         versionCode 1
         versionName "99.12.18.1"
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
@@ -65,6 +64,7 @@ android {
         dataBinding = true
         viewBinding = true
     }
+    buildToolsVersion '33.0.0'
 }
 
 dependencies {
@@ -72,30 +72,31 @@ dependencies {
 
     //noinspection GradleCompatible
     implementation 'com.android.support:appcompat-v7:28.0.0'
-    implementation 'androidx.appcompat:appcompat:1.2.0'
+    implementation 'androidx.appcompat:appcompat:1.4.2'
     //noinspection GradleCompatible
     implementation 'com.android.support:design:28.0.0'
-    implementation 'androidx.constraintlayout:constraintlayout:2.0.4'
+    implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
     //noinspection GradleDependency
     testImplementation 'junit:junit:4.13.1'
-    androidTestImplementation 'androidx.test:runner:1.3.0'
-    androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
+    androidTestImplementation 'androidx.test:runner:1.4.0'
+    androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
 
 
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
     implementation 'androidx.lifecycle:lifecycle-extensions:2.2.0'
 
-    implementation 'com.google.code.gson:gson:2.8.6'
-    implementation 'com.squareup.okhttp3:okhttp:4.2.2'
-    implementation 'com.github.MKergall:osmbonuspack:6.3'
-    implementation 'org.osmdroid:osmdroid-android:6.1.10@aar'
+    implementation 'com.google.code.gson:gson:2.9.0'
+//    implementation 'com.google.code.gson:gson:2.8.6'
+    implementation 'com.squareup.okhttp3:okhttp:4.9.3'
+    implementation 'com.github.MKergall:osmbonuspack:6.6.0'
+    implementation 'org.osmdroid:osmdroid-android:6.1.13@aar'
     implementation 'com.cocoahero.android:geojson:1.0.1@jar'
 
     implementation 'com.yarolegovich:lovely-dialog:1.0.7'
-    implementation 'com.squareup.retrofit2:retrofit:2.6.2'
-    implementation 'com.squareup.retrofit2:converter-gson:2.6.2'
-    implementation 'com.squareup.okhttp3:logging-interceptor:4.2.2'
-    implementation "com.squareup.retrofit2:converter-scalars:2.6.2"
+    implementation 'com.squareup.retrofit2:retrofit:2.9.0'
+    implementation 'com.squareup.retrofit2:converter-gson:2.9.0'
+    implementation 'com.squareup.okhttp3:logging-interceptor:4.9.3'
+    implementation "com.squareup.retrofit2:converter-scalars:2.9.0"
 
     implementation 'androidx.multidex:multidex:2.0.1'
     implementation 'com.facebook.shimmer:shimmer:0.5.0@aar'
@@ -104,7 +105,7 @@ dependencies {
     annotationProcessor 'android.arch.persistence.room:compiler:1.1.1'
 
     implementation 'gun0912.ted:tedpermission:1.0.3'
-    implementation 'io.reactivex.rxjava2:rxandroid:2.1.0'
+    implementation 'io.reactivex.rxjava2:rxandroid:2.1.1'
     implementation 'com.github.mayuce:AndroidDocumentScanner:1.4'
     implementation project(':openCVLibrary')
 //    implementation project(':persiandatepicker')
